compiler/testData/diagnostics/tests/annotations/AnnotationForObject.kt
// Check that there won't be "Rewrite at slice ANNOTATION key" exception - EA-36935
@<!UNRESOLVED_REFERENCE!>someErrorAnnotation<!> object Test {
}